--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "prisma": {
+    "seed": "tsx ./prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.16.2",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
@@ -17,6 +21,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "prisma": "^5.16.2",
     "tsx": "^4.16.2"
   }
 }
