--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.5",
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
     "react": "^18",
