--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@types/node": "^20",
